--- a/MobileAutomation/test-output/index.html
+++ b/MobileAutomation/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\anmol\AppData\Local\Temp\testng-eclipse-40263281\testng-customsuite.xml</span>
+                    <span>C:\Users\anmol\AppData\Local\Temp\testng-eclipse-343647321\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -131,10 +131,10 @@
                   <div class="stack-trace">org.openqa.selenium.NoSuchElementException: Can&apos;t locate an element by this strategy: By.chained({By.id: com.android.atigo:id/SelectedfragmentTitle})
 	at io.appium.java_client.pagefactory.AppiumElementLocator.findElement(AppiumElementLocator.java:126)
 	at io.appium.java_client.pagefactory.interceptors.InterceptorOfASingleElement.intercept(InterceptorOfASingleElement.java:60)
-	at io.appium.java_client.android.AndroidElement$$EnhancerByCGLIB$$43768359.getText(&lt;generated&gt;)
-	at com.atigo.utils.MethodBank.getText(MethodBank.java:16)
-	at com.atigo.businessLogics.SignInBL.verifyLogin(SignInBL.java:31)
-	at com.atigo.tests.SignInTests.TestingWithValidCredentials(SignInTests.java:23)
+	at io.appium.java_client.android.AndroidElement$$EnhancerByCGLIB$$15da9759.getText(&lt;generated&gt;)
+	at com.atigo.utils.MethodBank.getText(MethodBank.java:21)
+	at com.atigo.businessLogics.SignInBL.verifyLogin(SignInBL.java:28)
+	at com.atigo.tests.SignInTests.TestingWithValidCredentials(SignInTests.java:25)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -163,7 +163,7 @@
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-Caused by: org.openqa.selenium.TimeoutException: Expected condition failed: waiting for io.appium.java_client.pagefactory.AppiumElementLocator$WaitingFunction@51133c06 (tried for 1 second(s) with 500 milliseconds interval)
+Caused by: org.openqa.selenium.TimeoutException: Expected condition failed: waiting for io.appium.java_client.pagefactory.AppiumElementLocator$WaitingFunction@6f19ac19 (tried for 1 second(s) with 500 milliseconds interval)
 	at org.openqa.selenium.support.ui.FluentWait.timeoutException(FluentWait.java:304)
 	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:272)
 	at io.appium.java_client.pagefactory.AppiumElementLocator.waitFor(AppiumElementLocator.java:99)
@@ -198,7 +198,7 @@ Driver info: driver.version: AndroidDriver
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\anmol\AppData\Local\Temp\testng-eclipse-40263281\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\anmol\AppData\Local\Temp\testng-eclipse-343647321\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -251,12 +251,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TestingWithValidCredentials')
 data.setCell(0, 2, 'com.atigo.tests.SignInTests')
-data.setCell(0, 3, 34385);
+data.setCell(0, 3, 124895);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -291,13 +291,13 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">TestingWithValidCredentials</span>
-                <span class="method-start">13976 ms</span>
+                <span class="method-start">14555 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">Teardown</span>
-                <span class="method-start">48443 ms</span>
+                <span class="method-start">139575 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
